fix overflow picture

--- a/app/assets/stylesheets/adubacao-verde.css.scss
+++ b/app/assets/stylesheets/adubacao-verde.css.scss
@@ -18,24 +18,6 @@
 	border-bottom: 2px solid #ccc;
 }
 
-/*
-#aduba-fundo{
-	height: 550px;
-	background: image-url('adubacao_verde.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	//background-color: #2C83E3;
-	background-position: bottom center;
-	border-bottom: 5px solid #bccf00;
-	padding-top: 60px;
-}
-.aduba-caption{
-	background-color: #000;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
-	text-shadow: 0 1px 0 #000;
-}
-*/
 #raix-fundo{
 	background-color: #22463c;
 	color: #fff;
@@ -46,6 +28,7 @@
 }
 
 .logo-raix{
+	/*
 	height: 100%;
   	min-height: 100%;
   	display: -webkit-flex;
@@ -54,6 +37,7 @@
   	align-items: center;
   	-webkit-justify-content: center;
   	justify-content: center;
+  	*/
 }
 
 
